# elicitation

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  server.json
.github/workflows/: ci.yml  publish.yml  release.yml
crates/elicitation/: Cargo.toml  README.md
crates/elicitation-core/: Cargo.toml  README.md
crates/elicitation-core/src/: detect.rs  engine.rs  error.rs  event.rs  export.rs  lib.rs  model.rs  projection.rs  readiness.rs  research.rs  session.rs  signal.rs  store.rs
crates/elicitation-core/tests/: concurrency.rs  detectors.rs  errors_and_export.rs  readiness.rs  remediation.rs  roundtrip.rs  standing.rs
crates/elicitation-core/tests/common/: mod.rs
crates/elicitation/src/: config.rs  lib.rs  main.rs  server.rs
crates/elicitation/tests/: server.rs
docs/: spec.md
src/: lib.rs
src/session/: contract_tests.rs  machine.rs  mod.rs  recovery.rs  registry.rs  schema.rs  sqlite_store.rs  state.rs  store.rs  tests.rs
