[package]
name = "elicitation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Stdio MCP server wrapping the elicitation-core kernel: a deterministic, offline structured-discovery interview engine exposed as a command/query MCP tool surface."
keywords = ["mcp", "elicitation", "requirements", "discovery", "interview"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "elicitation"
path = "src/lib.rs"

[[bin]]
name = "elicitation"
path = "src/main.rs"

[dependencies]
elicitation-core = { path = "../elicitation-core", version = "0.0.1" }
anyhow = "1"
rmcp = { version = "1.7", default-features = false, features = ["server", "macros", "transport-io"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
